[FIX] history: Add spacing after date filter From/to (RT-2373)

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -57,7 +57,7 @@
       }
     }
   }
-  
+
 
   .kyc-error {
     color: @midred;
@@ -140,7 +140,7 @@
         margin-bottom: 15px;
         font-size: 13px;
       }
-      
+
     }
     .form-group {
       p.error-text {
@@ -311,7 +311,7 @@
     display: block;
   }
   .auth-form-wrapper {
-    
+
     .submit-btn-container {
       width: 70%;
     }
@@ -346,22 +346,22 @@
 
 #t-register {
   .auth-form-container {
-    
+
     padding-bottom: 50px;
   }
   .register_masterkey {
     position: relative;
-    
+
     .auth-attention {
       margin-top: 90px;
       text-align: center;
-      
+
       .recovery {
         margin-top: 10px;
-      } 
-    }     
+      }
+    }
   }
-  
+
   .welcome-wrapper {
   text-align: center;
   }
@@ -405,7 +405,7 @@
     .content {
       padding-top: 0;
       .auth-form-container {
-        padding: 15px; 
+        padding: 15px;
         padding-bottom: 0;
       }
     }
@@ -605,7 +605,7 @@
         color: @lightgreen;
         font-size: 85%;
       }
-      
+
       .amount {
         color: @darkgreen;
 
@@ -930,7 +930,7 @@
           input {
             margin-right: 10px;
           }
-        }     
+        }
       }
       & > i {
         float: left;
@@ -972,7 +972,7 @@
   .limit {
     text-overflow: ellipsis;
       overflow: hidden;
-  }  
+  }
   .currencyTitle {
     font-size: @font-size-big;
 
@@ -993,12 +993,12 @@
     margin-top: 10px;
     margin-bottom: 10px;
     font-weight: bold;
-    
+
   }
 
   .lines {
     color: @darkgray;
-    
+
     .line {
       padding: 5px 0;
     }
@@ -1136,6 +1136,10 @@
 
       .input-group {
         margin: 0 0 10px;
+
+        i.fa-fw {
+          margin-right: 5px;
+        }
       }
     }
   }
@@ -1300,7 +1304,7 @@
           @media (max-width: @screen-xs-max) {
             font-size: 12px;
           }
-          .effects {  
+          .effects {
             border-top: 1px solid @midgray;
             border-bottom: 1px solid @midgray;
             padding-top: 10px;
@@ -1616,7 +1620,7 @@
     float: left;
   }
   .edit-security-pswd{
-    line-height: 45px;  
+    line-height: 45px;
   }
   .settingPage a {
     display: block;
@@ -1736,10 +1740,10 @@
   label[for=persistUnlock]{
     padding-left: 5px;
   }
-  
+
   .note {
     font-size:12px;
-    color:@darkgray;  
+    color:@darkgray;
   }
 
   #renameForm {
@@ -1858,7 +1862,7 @@
 
   #servers {
     padding-top: 0px;
-    
+
     .trust-line-form {
       .edit-trust-line {
         line-height: 34px;
@@ -1888,12 +1892,12 @@
       }
       @media (max-width: @screen-xs-max) {
         .port-wrapper {
-        
+
           padding-left: 0px;
-        
+
         }
       }
-      
+
     }
     .helperInput {
       line-height: 44px;
@@ -1913,7 +1917,7 @@
     &.editable {
       line-height: 35px;
       // padding-left: 15px;
-     
+
     }
     .helperInput {
       // padding-top: 7px;
@@ -2245,12 +2249,12 @@
       margin: 10px 0;
     }
   }
-  
+
   .alert-danger .dismiss {
     margin:0 5px;
     color:darken(@midred, 10%);
   }
-  
+
   .alert-danger .dismiss:hover {
     color:darken(@midred, 30%);
   }
@@ -2462,7 +2466,7 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
         color:@white;
       }
     }
-    
+
   }
 }
 
@@ -2702,7 +2706,7 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
     }
   }
 
-  
+
 
   #nameChangeForm {
     margin: 10px 0 0 0;
@@ -2776,7 +2780,7 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
 
      button.spinner {
       padding-left:0;
-    }   
+    }
   }
 
 }
